# flatkiss

./: .clang-tidy  .devcontainer.json  .gitignore  CMakeLists.txt  Configuration.cpp  Configuration.hpp  Dockerfile  README.adoc  configuration.ini  editor.py  main.cpp  setup_dev_environment.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
assets/: animations.txt  animations_0.txt  animations_1.txt  animations_to_bin.py  characters.txt  characters_families.txt  characters_families_to_bin.py  characters_to_bin.py  charactersets.txt  charactersets_to_bin.py  collisions.txt  collisions_0.txt  collisions_1.txt  collisions_to_bin.py  indices_to_bin.py  levels_from_bin.py  levels_to_bin.py  maps_to_bin.py  solids.txt  solids_to_bin.py  spritesets.txt  spritesets_to_bin.py  tile_solid_map_0.txt
doc/: architecture.adoc  development.adoc  environment.adoc  release.adoc  test.adoc
engine/: CMakeLists.txt
engine/flatkiss/: CMakeLists.txt
engine/flatkiss/flatkiss/: character_controller.cpp  character_controller.hpp  configuration.cpp  configuration.hpp  main.cpp  main.hpp.in
engine/libflatkiss-data/: CMakeLists.txt
engine/libflatkiss-data/libflatkiss/data/: data.cpp  data.hpp  file_loader.cpp  file_loader.hpp  loader_action_sprite_mapper.cpp  loader_action_sprite_mapper.hpp  loader_animation_player.cpp  loader_animation_player.hpp  loader_character_template.cpp  loader_character_template.hpp  loader_level.cpp  loader_level.hpp  loader_solid.cpp  loader_solid.hpp  loader_spriteset.cpp  loader_spriteset.hpp  loader_tile_solid_mapper.cpp  loader_tile_solid_mapper.hpp  stream_reader.cpp  stream_reader.hpp
engine/libflatkiss-logic/: CMakeLists.txt
engine/libflatkiss-logic/libflatkiss/logic/: character_controller.cpp  character_controller.hpp  character_controller_loader.cpp  character_controller_loader.hpp  collider.cpp  collider.hpp  keyboard_character_controller.cpp  keyboard_character_controller.hpp  logic.cpp  logic.hpp  navigator.cpp  navigator.hpp  stroll_character_controller.cpp  stroll_character_controller.hpp
engine/libflatkiss-media/: CMakeLists.txt
engine/libflatkiss-media/libflatkiss/media/: event_handler.cpp  event_handler.hpp  key.cpp  key.hpp  keyboard_state.cpp  keyboard_state.hpp  media.hpp  renderer.cpp  renderer.hpp  texture.cpp  texture.hpp  texture_atlas.cpp  texture_atlas.hpp  window.cpp  window.hpp
engine/libflatkiss-model/: CMakeLists.txt
engine/libflatkiss-model/libflatkiss/model/: action.cpp  action.hpp  action_sprite_mapper.cpp  action_sprite_mapper.hpp  animation.cpp  animation.hpp  animation_player.cpp  animation_player.hpp  cardinal_direction.cpp  cardinal_direction.hpp  character.cpp  character.hpp  character_template.cpp  character_template.hpp  collider.cpp  collider.hpp  controller_type.cpp  controller_type.hpp  ellipse.cpp  ellipse.hpp  level.cpp  level.hpp  model.cpp  model.hpp  navigator.cpp  navigator.hpp  position.cpp  position.hpp  positioned_ellipse.cpp  positioned_ellipse.hpp  positioned_rectangle.cpp  positioned_rectangle.hpp  positioned_solid.cpp  positioned_solid.hpp  rectangle.cpp  rectangle.hpp  solid.cpp  solid.hpp  sprite.cpp  sprite.hpp  (+6 more)
levels/: editor.py  level.txt  level_from_bin.py  level_to_bin.py  levels.txt  levels_from_bin.py  levels_to_bin.py
sample-assets/: editor.py
sample-assets/assets-as-text/: characters.txt  levels.txt  solids.txt  spritesets.txt
sample-assets/generators/: animations_to_bin.py  characters_to_bin.py  fetch_pictures.py  generate_assets.py  levels_from_bin.py  levels_to_bin.py  maps_to_bin.py  solids_to_bin.py  spritesets_to_bin.py
source/main/src/: main.cpp
source/media/include/: media.hpp
source/model/include/: model.hpp
source/model/src/: cardinal_direction.cpp  cardinal_direction.hpp  collider.cpp  position.cpp  positioned_ellipse.cpp  positioned_ellipse.hpp  positioned_solid.cpp  solid.hpp
src/: Animation.cpp  Animation.hpp  AnimationPlayer.cpp  AnimationPlayer.hpp  Collider.cpp  Collider.hpp  Collision.cpp  Collision.hpp  Configuration.cpp  Configuration.hpp  Ellipse.cpp  Ellipse.hpp  KeyboardState.cpp  KeyboardState.hpp  Level.cpp  Level.hpp  Main.hpp.in  Navigator.cpp  Navigator.hpp  Position.cpp  Position.hpp  PositionedEllipse.cpp  PositionedEllipse.hpp  PositionedRectangle.cpp  PositionedRectangle.hpp  Rectangle.cpp  Rectangle.hpp  Renderer.cpp  Renderer.hpp  Tileset.cpp  Tileset.hpp  Vector.cpp  Vector.hpp  action.hpp  action_sprite_mapper.cpp  action_sprite_mapper.hpp  animation.cpp  animation.hpp  animation_player.cpp  animation_player.hpp  (+58 more)
src/media/: renderer.hpp
src/media/include/: media.hpp
src/model/: action.cpp  animation.hpp  animation_player.hpp  level.cpp  spriteset.cpp
src/model/include/: model.hpp
